Import audio changes from GT kernel source

--- a/techpack/audio/config/lahainaauto.conf
+++ b/techpack/audio/config/lahainaauto.conf
@@ -30,8 +30,6 @@ export CONFIG_TX_MACRO=m
 export CONFIG_SND_SOC_WCD_IRQ=m
 export CONFIG_SND_SOC_WCD938X=m
 export CONFIG_SND_SOC_WCD938X_SLAVE=m
-export CONFIG_SND_SOC_WCD937X=m
-export CONFIG_SND_SOC_WCD937X_SLAVE=m
 export CONFIG_SND_SOC_WSA883X=m
 export CONFIG_SND_SOC_SWR_DMIC=m
 export CONFIG_SND_SOC_LAHAINA=m
@@ -39,3 +37,8 @@ export CONFIG_SND_EVENT=m
 export CONFIG_SND_SWR_HAPTICS=m
 export CONFIG_DIGITAL_CDC_RSC_MGR=m
 export CONFIG_AUXPCM_DISABLE=m
+
+#ifdef OPLUS_ARCH_EXTENDS
+#Wei.Hua@MULTIMEDIA.AUDIODRIVER.SMARTPA, 2020/05/25, add for tfa9874 bringup
+export CONFIG_SND_SOC_TFA98XX=m
+#endif /* OPLUS_ARCH_EXTENDS */
