--- a/techpack/audio/Makefile
+++ b/techpack/audio/Makefile
@@ -2,6 +2,7 @@
 ifneq ($(CONFIG_ARCH_QTI_VM), y)
 ifeq ($(CONFIG_QTI_QUIN_GVM), y)
 include $(srctree)/techpack/audio/config/gvmauto.conf
+export
 endif
 ifeq ($(CONFIG_ARCH_SDXPOORWILLS), y)
 include $(srctree)/techpack/audio/config/sdxpoorwillsauto.conf
@@ -26,9 +27,7 @@ include $(srctree)/techpack/audio/config/holiauto.conf
 endif
 ifeq ($(CONFIG_ARCH_SA8155), y)
 include $(srctree)/techpack/audio/config/sa8155auto.conf
-endif
-ifeq ($(CONFIG_ARCH_SA6155), y)
-include $(srctree)/techpack/audio/config/sa6155auto.conf
+export
 endif
 endif
 # Use USERINCLUDE when you must reference the UAPI directories only.
@@ -74,10 +73,6 @@ endif
 ifeq ($(CONFIG_ARCH_SA8155), y)
 LINUXINCLUDE    += \
                 -include $(srctree)/techpack/audio/config/sa8155autoconf.h
-endif
-ifeq ($(CONFIG_ARCH_SA6155), y)
-LINUXINCLUDE    += \
-                -include $(srctree)/techpack/audio/config/sa6155autoconf.h
 endif
 
 obj-y += soc/
